Accessibility color contrasts fixes
Accessibility color contrasts fixes for some links in footer, header and breadcrumb

--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -90,7 +90,10 @@
         @apply inline-flex items-center gap-2 transition-colors lg:pe-6 xl:pe-8 2xl:pe-9;
       }
       & .submenu-btn {
-        @apply focus:ring-primary-400 relative inline-block focus:outline-none focus:ring-2  focus:ring-offset-2 lg:-ms-3 lg:h-3 lg:w-3 lg:-translate-x-2 lg:rtl:translate-x-2 xl:-translate-x-3 xl:rtl:translate-x-3 2xl:-ms-4 2xl:h-4 2xl:w-4;
+        @apply focus:ring-primary-400 relative inline-block focus:outline-none focus:ring-2 focus:ring-offset-0 lg:-ms-5 xl:-ms-8 lg:h-4 lg:w-4 xl:h-6 xl:w-6;
+        & svg, & img{
+          @apply lg:w-3 lg:h-3 mx-auto;
+        }
       }
     }
   }
